--- a/index.html
+++ b/index.html
@@ -216,17 +216,18 @@
 
         <section class="about-text">
           <p>
-            I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web development and print media.
+            I'm Creative Director and UI/UX Designer from Milagro, Ecuador, working in web development and print media.
             I enjoy
             turning complex problems into simple, beautiful and intuitive designs.
           </p>
 
           <p>
-            My job is to build your website so that it is functional and user-friendly but at the same time attractive.
-            Moreover, I
-            add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring
-            across your
-            message and identity in the most creative way. I created web design for many famous brand companies.
+            Specialist in technology project management, more than 10 years of experience developing and leading projects
+            developing and leading projects of development and implementation of IT systems and infrastructure in the telecommunications, health
+            infrastructure in the telecommunications, health, financial, industrial and pharmaceutical sectors.
+            and pharmaceutical sectors. Network and Server Administrator of databases, domain, mail,
+            proxy, dhcp, web, ftp, etc. Technical support to users and management with suppliers. Also
+            Constant interest in web projects and new technologies.
           </p>
         </section>
 
