--- a/index.html
+++ b/index.html
@@ -116,7 +116,20 @@
             <div class="contact-info">
               <p class="contact-title">Phone</p>
 
-              <a href="tel:+12133522795" class="contact-link">+593 980368616</a>
+              <a href="tel:+593980368616" class="contact-link">+593 980368616</a>
+            </div>
+
+          </li>
+          <li class="contact-item">
+
+            <div class="icon-box">
+              <ion-icon name="whatsapp-outline"></ion-icon>
+            </div>
+
+            <div class="contact-info">
+              <p class="contact-title">Phone</p>
+
+              <a href="https://wa.me/593980368616?text=Hola%20Angel,%20acabo%20de%20ver%20tu%20perfil%20y%20desearía%20contactarme%20contigo" class="contact-link">+593 980368616</a>
             </div>
 
           </li>
