--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
 
             <li class="clients-item">
               <a href="#">
-                <img src="./assets/images/logo-3-color.png" alt="client logo">
+                <img src="./assets/images/psi-logo.png" alt="client logo">
               </a>
             </li>
 
