--- a/index.html
+++ b/index.html
@@ -543,41 +543,36 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">University school of the arts</h4>
+              <h4 class="h4 timeline-item-title">Escuela Superior Politécnica del Litoral</h4>
 
-              <span>2007 — 2008</span>
+              <span>2015 — 2017</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                Master's degree in management information systems.
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">New york academy of art</h4>
+              <h4 class="h4 timeline-item-title">Escuela Superior Politécnica del Litoral</h4>
 
-              <span>2006 — 2007</span>
+              <span>2004 — 2011</span>
 
               <p class="timeline-text">
-                Ratione voluptatem sequi nesciunt, facere quisquams facere menda ossimus, omnis voluptas assumenda est
-                omnis..
+                Graduate of Engineering in computer sciences
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">High school of art and design</h4>
+              <h4 class="h4 timeline-item-title">High school Military Tnte. Hugo Ortiz</h4>
 
               <span>2002 — 2004</span>
 
               <p class="timeline-text">
-                Duis aute irure dolor in reprehenderit in voluptate, quila voluptas mag odit aut fugit, sed consequuntur
-                magni dolores
-                eos.
+                Graduate of Mathematical Physics
               </p>
 
             </li>
@@ -666,7 +661,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Graphic design</h5>
+                <h5 class="h5">Database Administrator</h5>
                 <data value="70">70%</data>
               </div>
 
@@ -679,7 +674,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Branding</h5>
+                <h5 class="h5">Web Developer</h5>
                 <data value="90">90%</data>
               </div>
 
@@ -692,7 +687,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">WordPress</h5>
+                <h5 class="h5">Networking Administrator</h5>
                 <data value="50">50%</data>
               </div>
 
