Actualizacion del mensaje de Presentacion

--- a/index.html
+++ b/index.html
@@ -237,12 +237,9 @@
           </p>
 
           <p>
-            Specialist in technology project management, more than 10 years of experience developing and leading projects
-            developing and leading projects of development and implementation of IT systems and infrastructure in the telecommunications, health
-            infrastructure in the telecommunications, health, financial, industrial and pharmaceutical sectors.
-            and pharmaceutical sectors. Network and Server Administrator of databases, domain, mail,
-            proxy, dhcp, web, ftp, etc. Technical support to users and management with suppliers. Also
-            Constant interest in web projects and new technologies.
+           Technology Project Management Specialist, with over 10 years of experience leading development, implementation, and management of IT systems and infrastructure across key industries such as telecommunications, healthcare, finance, industrial, and pharmaceutical sectors.
+Skilled in network and server administration, including databases, domains, email systems, proxy servers, DHCP, web, FTP, and more. Strong background in technical support and vendor management.
+Passionate about emerging technologies, web development, and digital innovation. Constantly seeking to improve processes and drive technological transformation within organizations.
           </p>
         </section>
 
