Actualización de la sección de experiencia en el portafolio, incluyendo nuevos roles y descripciones en español. Se mejoraron los filtros y selectores en el código para una mejor funcionalidad y usabilidad.

--- a/index.html
+++ b/index.html
@@ -639,8 +639,13 @@
 
             <li class="timeline-item experience-extra" style="display:none;">
               <h4 class="h4 timeline-item-title" data-i18n="exp3Title">Web designer</h4>
-              <span>2010 — 2013</span>
+              <span class="timeline-text" data-i18n="exp3Ano">2015 — Present</span>
               <p class="timeline-text" data-i18n="exp3Desc">Diseño y desarrollo de sitios web atractivos y funcionales.</p>
+            </li>
+            <li class="timeline-item experience-extra" style="display:none;">
+              <h4 class="h4 timeline-item-title" data-i18n="exp4Title">Web designer</h4>
+              <span class="timeline-text" data-i18n="exp4Ano">2015 — Present</span>
+              <p class="timeline-text" data-i18n="exp4Desc">Diseño y desarrollo de sitios web atractivos y funcionales.</p>
             </li>
           </ol>
           <button id="btn-see-more-exp" style="margin: 10px 0 0 0; padding: 6px 18px; background: #e67e22; color: #fff; border: none; border-radius: 6px; font-weight: 500; font-size: 15px; cursor: pointer;" data-i18n="seeMore">Ver más</button>
@@ -731,19 +736,19 @@
           <ul class="filter-list">
 
             <li class="filter-item">
-              <button class="active" data-filter-btn data-i18n="all">All</button>
+              <button class="active" data-filter-btn data-filter="all" data-i18n="all">Todos</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn data-i18n="webDesign">Web design</button>
+              <button data-filter-btn data-filter="web design" data-i18n="webDesign">Diseño web</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn data-i18n="applications">Applications</button>
+              <button data-filter-btn data-filter="applications" data-i18n="applications">Aplicaciones</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn data-i18n="webDevelopment">Web development</button>
+              <button data-filter-btn data-filter="web development" data-i18n="webDevelopment">Desarrollo web</button>
             </li>
 
           </ul>
@@ -763,19 +768,19 @@
             <ul class="select-list">
 
               <li class="select-item">
-                <button data-select-item data-i18n="all">All</button>
+                <button data-select-item data-filter="all" data-i18n="all">All</button>
               </li>
 
               <li class="select-item">
-                <button data-select-item data-i18n="webDesign">Web design</button>
+                <button data-select-item data-filter="web design" data-i18n="webDesign">Web design</button>
               </li>
 
               <li class="select-item">
-                <button data-select-item data-i18n="applications">Applications</button>
+                <button data-select-item data-filter="applications" data-i18n="applications">Applications</button>
               </li>
 
               <li class="select-item">
-                <button data-select-item data-i18n="webDevelopment">Web development</button>
+                <button data-select-item data-filter="web development" data-i18n="webDevelopment">Web development</button>
               </li>
 
             </ul>
