--- a/index.html
+++ b/index.html
@@ -1163,7 +1163,7 @@
 
           <h3 class="h3 form-title" data-i18n="contactForm">Contact Form</h3>
 
-          <form action="#" class="form" data-form>
+          <form action="contact.php" method="POST" class="form" data-form>
 
             <div class="input-wrapper">
               <input type="text" name="fullname" class="form-input" placeholder="Full name" required data-form-input data-i18n="fullName">
