--- a/index.html
+++ b/index.html
@@ -1187,7 +1187,7 @@
     - custom js link
   -->
   <script src="./assets/js/lang.js"></script>
-  <script src="./assets/js/script.js"></script>
+  <script type="module" src="./assets/js/script.js"></script>
 
   <!--
     - ionicon link
