--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="keywords" content="Andabral, Desarrollador Ecuador, Desarrollador Guayaquil">
-  <meta name="description" content="Portfolio profesional de Angel Bracero">
+  <meta name="keywords" content="Andabral, Angel Bracero, Desarrollador Ecuador, Desarrollador Guayaquil">
+  <meta name="description" content="Portafolio profesional de Angel David Bracero Alban - Desarrollador Full Stack especializado en PHP, JavaScript y soluciones web modernas">
   
-  <title>Portfolio web - Personal Portfolio</title>
+  <title>Angel David Bracero Alban - Portafolio | Desarrollador Full Stack PHP y JavaScript</title>
 
   <!--
     - favicon
@@ -23,6 +23,8 @@
   <!--
     - google font link
   -->
+    
+  <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
